# Fam-Tree-Game

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
assets/4pic1word/: wordgamedb.json  words.json
assets/LittleAlchemy2/: CREDIT.md  fanon_db.json  fanon_tg_emoji_ids.json
bot/: __init__.py  __main__.py  achievements.py  client.py  command_registry.py  config.py  constants.py  database.py  decorators.py  input_file.py  models.py  queue_it.py  runtime.py  utils.py  watchdog.py
bot/graphics/: __init__.py  circle_renderer.py  circle_renderer_pyvis.py  marriage_card.py  nation_globe.py  svg_utils.py  tree_renderer.py  tree_renderer_pyvis.py  utils.py
bot/plugins/: __init__.py  admin.py  animals.py  callbacks.py  combat.py  craft.py  daily.py  eval_cmd.py  factory.py  family.py  feedback.py  fishing.py  four_pic.py  friends.py  gambling.py  gangs.py  garden.py  jobs.py  leaderboard.py  nation.py  pet.py  profile.py  reaction_tracker.py  shop.py  sonar.py  start.py  work_games.py
scripts/LittleAlchemy2/: delete_pack.py  get_db_json.sh  get_svg.sh  make_pack.py  mapping.json
scripts/LittleAlchemy2/Fanon/: README.md  add_single_emoji.py  build_fanon_db.py  compress.sh  dump_fanon_category.sh  dump_images_url.sh  fanon_fetch_sources.py  get_images_file.sh  make_fanon_pack.py
scripts/LittleAlchemy2/Fanon/data/: non_fanon.json  (+1 more)
tests/: __init__.py  conftest.py  test_circle_renderer.py  test_database.py  test_four_pic.py  test_me_profile.py  test_queue_it.py  test_sonar_render.py  test_tree_renderer.py
(+26 files in other folders)
