[project]
name = "fam-tree-game"
version = "0.2.0"
description = "Family Tree Telegram Bot"
requires-python = ">=3.11"
dependencies = [
    "kurigram>=2.2.22",
    "tgcrypto>=1.2.5",
    "uvloop>=0.21.0",
    "aiohttp>=3.9.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "Pillow>=10.0.0",
    "pyvis>=0.3.2",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.1",
    "pycairo>=1.26.0",
    "PyGObject>=3.48.0",
    "cartopy>=0.25.0",
    "geopandas>=1.1.3",
    "rapidfuzz>=3.14.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
